# CS-3353-Algorithms

./: README.md
Lab1/: Algorithm.h  Bubble.cpp  Bubble.h  CMakeLists.txt  Insertion.cpp  Insertion.h  Merge.cpp  Merge.h  Sort.cpp  Sort.h  generator.cpp  generator.h  main.cpp
Lab1/src/: 10-PartialUniqueValues.csv  1000-PartialUniqueValues.csv  10000-FullyRandom.csv  10000-PartialUniqueValues.csv  Algorithm.h  Bubble.cpp  Bubble.h  CMakeLists.txt  CS-3353 Lab1 Data and Tables.xlsx  Insertion.cpp  Insertion.h  Kennedy - CS 3353 Lab1 Write-up.docx  Merge.cpp  Sort.cpp  Sort.h  dataSetFileNames.txt  generator.cpp  generator.h  main.cpp  ~$nnedy - CS 3353 Lab1 Write-up.docx
Lab2/: Algorithm.h  Astar.cpp  Astar.h  Dijkstra.cpp  Dijkstra.h  (+20 more)
Lab2/src/: Algorithm.h  Astar.cpp  CMakeLists.txt  Dijkstra.cpp  Dijkstra.h  Graph.cpp  IterativeBFS.cpp  IterativeDFS.cpp  Lab 2 Write-Up.docx  RecursiveBFS.cpp  RecursiveBFS.h  RecursiveDFS.cpp  Search.cpp  Search.h  adjacencyList100Output.xlsx  adjacencyMatrix100Output.xlsx  main.cpp
Lab2/src/data/large50/: largeGraph.txt  outputList.csv  outputMatrix.csv
Lab4/: Algo.h  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  GeneticAlgo.cpp  GeneticAlgo.h  Graph.cpp  Graph.h  Naive.cpp  Naive.h  Solution.cpp  Solution.h  TSPAlgo.cpp  TSPAlgo.h  Tabu.cpp  Tabu.h  main.cpp  tabu.cpp  tabu.h
Lab4/src/: CMakeLists.txt  GeneticAlgo.cpp  GeneticAlgo.h  Lab4 Report.docx  TSPAlgo.cpp  TSPAlgo.h  Tabu.cpp  Tabu.h  dp.h  main.cpp
Lab4/src/data/: All Algos Compared.xlsx  Genetic Algorithm.csv  Tabu vs. GA.xlsx  Tabu.csv  dp.csv
(+64 files in other folders)
